tests/vendor/invalid/semantics/undeclared_compound_assignment.c
//tags: simple, undeclared
int main() {
    a += 1;
    return 0;
}